// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render basic component should check snapshot with Avatar props with add button 1`] = `
<div>
  <div
    class="stack"
  >
    <div
      class="stackAvatar Avatar contentStyle"
    >
      <div
        class="AvatarInner"
        style="border-radius: 100%; line-height: 28px; width: 28px; height: 28px; font-size: 10px;"
      >
        +
      </div>
    </div>
    <div
      class="stackAvatar Avatar contentStyle"
    >
      <div
        class="AvatarInner"
        style="border-radius: 100%; line-height: 28px; width: 28px; height: 28px; font-size: 10px;"
      >
        <img
          alt=""
          class="imageStyle"
          src="https://image.shutterstock.com/image-photo/buddha-statue-hyderabadhyderabadindia-260nw-1366155431.jpg"
          style="border-radius: 100%; line-height: 28px; width: 28px; height: 28px; font-size: 10px;"
        />
      </div>
    </div>
    <div
      class="stackAvatar Avatar contentStyle"
    >
      <div
        class="AvatarInner"
        style="border-radius: 100%; line-height: 28px; width: 28px; height: 28px; font-size: 10px;"
      >
        GH
      </div>
    </div>
    <div
      class="stackAvatar Avatar contentStyle"
    >
      <div
        class="AvatarInner"
        style="border-radius: 100%; line-height: 28px; width: 28px; height: 28px; font-size: 10px;"
      >
        EF
      </div>
    </div>
    <div
      class="stackAvatar Avatar contentStyle"
    >
      <div
        class="AvatarInner"
        style="border-radius: 100%; line-height: 28px; width: 28px; height: 28px; font-size: 10px;"
      >
        CH
      </div>
    </div>
    <div
      class="stackAvatar Avatar contentStyle"
    >
      <div
        class="AvatarInner"
        style="border-radius: 100%; line-height: 28px; width: 28px; height: 28px; font-size: 10px;"
      >
        AS
      </div>
    </div>
  </div>
</div>
`;

exports[`Render basic component should check snapshot with Avatar props without add button 1`] = `
<div>
  <div
    class="stack"
  >
    <div
      class="stackAvatar Avatar contentStyle"
    >
      <div
        class="AvatarInner"
        style="border-radius: 100%; line-height: 28px; width: 28px; height: 28px; font-size: 10px;"
      >
        <img
          alt=""
          class="imageStyle"
          src="https://image.shutterstock.com/image-photo/buddha-statue-hyderabadhyderabadindia-260nw-1366155431.jpg"
          style="border-radius: 100%; line-height: 28px; width: 28px; height: 28px; font-size: 10px;"
        />
      </div>
    </div>
    <div
      class="stackAvatar Avatar contentStyle"
    >
      <div
        class="AvatarInner"
        style="border-radius: 100%; line-height: 28px; width: 28px; height: 28px; font-size: 10px;"
      >
        GH
      </div>
    </div>
    <div
      class="stackAvatar Avatar contentStyle"
    >
      <div
        class="AvatarInner"
        style="border-radius: 100%; line-height: 28px; width: 28px; height: 28px; font-size: 10px;"
      >
        E
      </div>
    </div>
    <div
      class="stackAvatar Avatar contentStyle"
    >
      <div
        class="AvatarInner"
        style="border-radius: 100%; line-height: 28px; width: 28px; height: 28px; font-size: 10px;"
      >
        CH
      </div>
    </div>
    <div
      class="stackAvatar Avatar contentStyle"
    >
      <div
        class="AvatarInner"
        style="border-radius: 100%; line-height: 28px; width: 28px; height: 28px; font-size: 10px;"
      >
        AS
      </div>
    </div>
  </div>
</div>
`;

exports[`Render basic component should check snapshot with Avatar props without overlap 1`] = `
<div>
  <div
    class="noStack"
  >
    <div
      class="Avatar contentStyle"
    >
      <div
        class="AvatarInner"
        style="border-radius: 100%; line-height: 28px; width: 28px; height: 28px; font-size: 10px;"
      >
        AS
      </div>
    </div>
    <div
      class="Avatar contentStyle"
    >
      <div
        class="AvatarInner"
        style="border-radius: 100%; line-height: 28px; width: 28px; height: 28px; font-size: 10px;"
      >
        CH
      </div>
    </div>
    <div
      class="Avatar contentStyle"
    >
      <div
        class="AvatarInner"
        style="border-radius: 100%; line-height: 28px; width: 28px; height: 28px; font-size: 10px;"
      >
        E
      </div>
    </div>
    <div
      class="Avatar contentStyle"
    >
      <div
        class="AvatarInner"
        style="border-radius: 100%; line-height: 28px; width: 28px; height: 28px; font-size: 10px;"
      >
        GH
      </div>
    </div>
    <div
      class="Avatar contentStyle"
    >
      <div
        class="AvatarInner"
        style="border-radius: 100%; line-height: 28px; width: 28px; height: 28px; font-size: 10px;"
      >
        <img
          alt=""
          class="imageStyle"
          src="https://image.shutterstock.com/image-photo/buddha-statue-hyderabadhyderabadindia-260nw-1366155431.jpg"
          style="border-radius: 100%; line-height: 28px; width: 28px; height: 28px; font-size: 10px;"
        />
      </div>
    </div>
  </div>
</div>
`;
